# flask-cookiecutter-basic

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: MANIFEST.in  pyproject.toml  setup.cfg
