[metadata]
name = {{cookiecutter.project_name}}
version = {{cookiecutter.version}}

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    Flask
    SQLAlchemy
    flask-sqlalchemy
    cerberus
    flask-login
    psycopg[binary]
    pyyaml
    formencode

[options.extras_require]
testing =
    pytest
    coverage
    pytest-cov
    lxml
    beautifulsoup4
