[metadata]
name = {{cookiecutter.project_name}}
version = {{cookiecutter.version}}

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    {%- for item in cookiecutter.dependencies.strip().split(",") %}
    {{ item.strip() }}
    {%- endfor %}

{% if cookiecutter.testing_dependencies -%}
[options.extras_require]
testing =
    {%- for item in cookiecutter.testing_dependencies.strip().split(",") %}
    {{ item.strip() }}
    {%- endfor %}
{% endif %}